# Native-FlipBlur-App-OpenCV

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/babyapps/blurimageapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-utils.cpp  opencv-utils.h
app/src/main/java/com/babyapps/blurimageapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/babyapps/blurimageapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
